[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkedhost"
version = "0.1.0"
description = "Python client for the SparkedHost (Apollo Panel) API"
requires-python = ">=3.8"
dependencies = ["requests>=2.25"]

[tool.setuptools.packages.find]
include = ["sparkedhost*"]
