[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkedhost"
version = "0.1.0"
description = "Python client for the SparkedHost (Apollo Panel) API — power servers, manage files, run backups."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Jkratz01" }]
keywords = ["sparkedhost", "apollo", "pterodactyl", "minecraft", "game-server", "panel", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = ["requests>=2.25"]

[project.urls]
Homepage = "https://github.com/Jkratz01/sparkedhost"
Repository = "https://github.com/Jkratz01/sparkedhost"
Issues = "https://github.com/Jkratz01/sparkedhost/issues"

[tool.setuptools.packages.find]
include = ["sparkedhost*"]
